fix style of visible icon

--- a/styles/navigation-panel.less
+++ b/styles/navigation-panel.less
@@ -94,7 +94,7 @@
           font-weight: bold;
         }
 
-        &.visible .icon {
+        &.visible .navigation-icon {
           color: @ui-site-color-1;
         }
 
